[package]
name = "dicey"
version = "0.1.0"
authors = ["Craig Macomber <CraigM@CraigM.info>"]
edition = "2024"
description = "A dice roller library supporting many features"
keywords = ["dice", "roll", "RPG", "roll", "random"]
categories = ["game-development", "games"]
repository = "https://github.com/Craig-Macomber/caith"
license = "MIT"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.4.1"
pest_derive = "2.4.1"
rand = "0.9.1"

[dev-dependencies]
rand_core = "0.9.3"

