[package]
name = "dicey"
version = "0.1.0"
authors = ["Craig Macomber <CraigM@CraigM.info>"]
edition = "2024"
description = "A dice roller library supporting many features"
keywords = ["dice", "roll", "RPG", "roll", "random"]
categories = ["game-development", "games"]
repository = "https://github.com/Craig-Macomber/game-tools"
license = "MIT"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.8.4"
pest_derive = "2.8.4"
rand = "0.9.2"

[dev-dependencies]
rand_core = "0.9.3"

