[package]
name = "roll"
version = "0.1.0"
authors = ["Craig Macomber <CraigM@CraigM.info>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = [] }
# Has a fix for https://github.com/Geobert/caith/issues/5
caith = { git = "https://github.com/Craig-Macomber/caith", branch = "cleanup" }
dioxus-markdown = { git = "https://github.com/Craig-Macomber/rust-web-markdown", rev = "809fbb99f52c219a60bac5345e2f3e271abc41f8" }
chrono = { version = "0.4", features = ["now", "wasmbind"] }
# async-std supports sleep/delay/timeout on wasm-unknown while tokio does not.
async-std = { version = "1.13" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# caith pulls in "getrandom" which needs custom features to support WASM:
getrandom = { version = "0.3.2", features = ["wasm_js"] }
web-sys = { version = "0.3.76", features = [
    'Document',
    "Location",
    "Storage",
    "Window",
] }
js-sys = { version = "0.3.76" }
wasm-bindgen = { version = "0.2" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
