[package]
name = "roll"
version = "0.1.0"
authors = ["Craig Macomber <CraigM@CraigM.info>"]
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.0", features = [] }
# dioxus-sdk = { version = "0.6.0", features = ["storage"] }
# Has a fix for https://github.com/Geobert/caith/issues/5
caith = { git = "https://github.com/Craig-Macomber/caith", rev = "f42d5cf2b2523db62c007247db6f392dc308ba72" }
# Disable default features to opt out of "math" since it is not supported on desktop builds
dioxus-markdown = { git = "https://github.com/Craig-Macomber/rust-web-markdown", rev = "e06e3f117c8c26f1f90a6802d85c4c69b2ff9a0e", default-features = false }
chrono = { version = "0.4", features = ["now", "wasmbind", "serde"] }
# async-std supports sleep/delay/timeout on wasm-unknown while tokio does not.
async-std = { version = "1.13" }
serde_json = "1.0.140"
serde = "1.0.219"
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# caith pulls in "getrandom" which needs custom features to support WASM:
getrandom = { version = "0.3.2", features = ["wasm_js"] }
web-sys = { version = "0.3.76", features = [
    "Document",
    "Location",
    "Storage",
    "StorageEvent",
    "Window",
] }
js-sys = { version = "0.3.76" }
wasm-bindgen = { version = "0.2" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
